Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/motepair/motepair">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/Phara0h/motepair2">View on GitHub</a>
 
           <h1 id="project_title">Motepair</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/motepair/motepair/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/motepair/motepair/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Phara0h/motepair2/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Phara0h/motepair2/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -32,25 +32,25 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="remote-pairing-package" class="anchor" href="#remote-pairing-package" aria-hidden="true"><span class="octicon octicon-link"></span></a>Remote Pairing package</h1>
+<a id="remote-pairing-package" class="anchor" href="#remote-pairing-package" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Remote Pairing package</h1>
 
 <p>Remote pair programming tool for Atom. Lag free!</p>
 
 <p><img src="https://raw.githubusercontent.com/motepair/motepair/master/docs/motepair.gif" alt="remote-pair"></p>
 
 <h3>
-<a id="how-it-works" class="anchor" href="#how-it-works" aria-hidden="true"><span class="octicon octicon-link"></span></a>How it Works</h3>
+<a id="how-it-works" class="anchor" href="#how-it-works" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How it Works</h3>
 
 <p>We’ve done a basic integration with  <a href="http://sharejs.org/">Share.js</a> to allow concurrent editing via OT and bind some Atom events to a websocket, like opening/closing/saving files.</p>
 
 <h3>
-<a id="installing" class="anchor" href="#installing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing</h3>
+<a id="installing" class="anchor" href="#installing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installing</h3>
 
 <p>Use the Atom package manager, which can be found in the Settings view or
 run <code>apm install motepair</code> from the command line.</p>
 
 <h3>
-<a id="using" class="anchor" href="#using" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using</h3>
+<a id="using" class="anchor" href="#using" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using</h3>
 
 <p>Open the project to start collaborating via the <code>Motepair:connect</code> command
 (you can trigger this command via Cmd+Shift+P).</p>
@@ -58,7 +58,7 @@ run <code>apm install motepair</code> from the command line.</p>
 <p>Please make sure that peers to open the same project directory. This is a very important step as we rely on the relative project path to identify the correct file.</p>
 
 <h3>
-<a id="current-status" class="anchor" href="#current-status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Status</h3>
+<a id="current-status" class="anchor" href="#current-status" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Status</h3>
 
 <p>Features:</p>
 
@@ -78,7 +78,7 @@ run <code>apm install motepair</code> from the command line.</p>
 </ul>
 
 <h3>
-<a id="development" class="anchor" href="#development" aria-hidden="true"><span class="octicon octicon-link"></span></a>Development</h3>
+<a id="development" class="anchor" href="#development" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Development</h3>
 
 <ul>
 <li>Create a branch with your feature/fix.</li>
@@ -87,7 +87,7 @@ run <code>apm install motepair</code> from the command line.</p>
 </ul>
 
 <h3>
-<a id="warning" class="anchor" href="#warning" aria-hidden="true"><span class="octicon octicon-link"></span></a>Warning</h3>
+<a id="warning" class="anchor" href="#warning" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Warning</h3>
 
 <p>The connection right now it is not encrypted if you have problems with that, please do not use it. That is part of the backlog.</p>
 
@@ -98,7 +98,7 @@ run <code>apm install motepair</code> from the command line.</p>
 <p>Check out the <a href="https://github.com/motepair/motepair-server">server repository</a></p>
 
 <h2>
-<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h2>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h2>
 
 <ul>
 <li>
@@ -108,7 +108,7 @@ run <code>apm install motepair</code> from the command line.</p>
 </ul>
 
 <h2>
-<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
 
 <p>GPL v3 License. © 2014 Leon Maia &amp; Luiz Filho</p>
       </section>
@@ -117,8 +117,8 @@ run <code>apm install motepair</code> from the command line.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Motepair maintained by <a href="https://github.com/motepair">motepair</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">Motepair maintained by <a href="https://github.com/Phara0h">Phara0h</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
